# NFS_FUSE_Implementation

./: .gitignore  README  README.md  local_looper.sh  looper.sh
benchmark/: CMakeLists.txt  benchCreateDel.cpp  benchRWSync.cpp  makefile
client_side/fuseClient/: CMakeLists.txt  NFSClient.cpp  NFSClient.h  makefile
client_side/rpcClient/: CMakeLists.txt  NfsRpc_server.cpp  ThriftNfsRpc_Client.cpp  ThriftNfsRpc_Client.h
client_side/rpcClient/gen-cpp/: NfsRpc.cpp  NfsRpc.h  NfsRpc_constants.cpp  NfsRpc_types.h
client_side/rpcGateway/: CMakeLists.txt  RPCGateway.cpp  RPCGateway.h
client_side/v1/: CMakeLists.txt  Makefile  RPCGateway.cpp  RPCGateway.h  ThriftNfsRpc_Client.cpp
client_side/v1/gen-cpp/: NfsRpc_server.skeleton.cpp  NfsRpc_types.cpp
client_side/v2/: CMakeLists.txt  Makefile  NFSClient.cpp  NfsRpc.thrift  RPCGateway.cpp  RPCGateway.h  ThriftNfsRpc_Client.cpp  ThriftNfsRpc_Client.h
client_side/v2/gen-cpp/: NfsRpc.cpp  NfsRpc.h  NfsRpc_server.skeleton.cpp  NfsRpc_types.cpp  NfsRpc_types.h
client_side/v3/: CMakeLists.txt  NFSClient.cpp  NfsRpc.thrift  RPCGateway.cpp  RPCGateway.h  ThriftNfsRpc_Client.cpp  WriteCache.cpp  WriteCacheEntry.h
client_side/v3/gen-cpp/: NfsRpc_server.skeleton.cpp
client_side/v4/: CMakeLists.txt  Makefile  NFSClient.cpp  NfsRpc_server.cpp  RPCGateway.cpp  RPCGateway.h  ThriftNfsRpc_Client.cpp  ThriftNfsRpc_Client.h  WriteCache.cpp  WriteCache.h  WriteCacheEntry.cpp
client_side/v4/gen-cpp/: NfsRpc.cpp  NfsRpc.h
fuse/: hello
fuse/v1/: CMakeLists.txt  hello.c  hello.cpp  makefile
fuse/v2/: CMakeLists.txt  Echo_client.cpp  Echo_server.cpp  RPCClient.h  echo.thrift  hello.cpp  makefile
fuse/v2/gen-cpp/: Echo.cpp  Echo.h  Echo_server.skeleton.cpp  echo_constants.cpp  echo_constants.h  echo_types.cpp  echo_types.h
fuse/v3/: CMakeLists.txt
graphs/: bar_graph.py  multi_bars_per_col_graph.py
graphs/data/1k/: breakCols.sh  localhost_1000.txt  localsys_1000.txt  v2_1000.txt  v3_1000.txt
graphs/data/1k/fsync/: baseline_1000.txt  localhost_1000.txt  v2_1000.txt  v3_1000.txt  v4_1000.txt
graphs/data/1k/read/: localhost_1000.txt  localsys_1000.txt  v2_1000.txt  v3_1000.txt
graphs/data/1k/write/: localhost_1000.txt  localsys_1000.txt  v2_1000.txt  v3_1000.txt
graphs/data/cd/: breakCols.sh  localhost_cd.txt.txt  localsys_cd.txt.txt  v2_cd.txt.txt  v3_cd.txt.txt  v4_cd.txt.txt
graphs/data/cd/CLOSE/: localhost_cd.txt.txt  localsys_cd.txt.txt  v2_cd.txt.txt  v3_cd.txt.txt  v4_cd.txt.txt
graphs/data/cd/CREATE/: localhost_cd.txt.txt  localsys_cd.txt.txt  v2_cd.txt.txt  v3_cd.txt.txt  v4_cd.txt.txt
graphs/data/cd/MKDIR/: localhost_cd.txt.txt  localsys_cd.txt.txt  v2_cd.txt.txt  v3_cd.txt.txt  v4_cd.txt.txt
graphs/data/cd/RMDIR/: localhost_cd.txt.txt  localsys_cd.txt.txt  v2_cd.txt.txt  v3_cd.txt.txt  v4_cd.txt.txt
graphs/data/cd/STAT/: localhost_cd.txt.txt  localsys_cd.txt.txt  v2_cd.txt.txt  v3_cd.txt.txt  v4_cd.txt.txt
graphs/data/cd/UNLINK/: localhost_cd.txt.txt  localsys_cd.txt.txt  v2_cd.txt.txt  v3_cd.txt.txt  v4_cd.txt.txt
graphs/data/v4/: breakCols.sh  v4_1.txt.txt  v4_10.txt.txt  v4_100.txt.txt  v4_1000.txt.txt  v4_10000.txt.txt  v4_100000.txt.txt  v4_20000.txt.txt  v4_40000.txt.txt  v4_60000.txt.txt
graphs/data/v4/fsync/: v4_1.txt.txt  v4_10.txt.txt  v4_100.txt.txt  v4_10000.txt.txt  v4_100000.txt.txt  v4_20000.txt.txt  v4_40000.txt.txt  v4_60000.txt.txt
graphs/data/v4/read/: v4_1.txt.txt  v4_10.txt.txt  v4_100.txt.txt  v4_1000.txt.txt  v4_10000.txt.txt  v4_100000.txt.txt  v4_20000.txt.txt  v4_40000.txt.txt  v4_60000.txt.txt
graphs/data/v4/write/: v4_1.txt.txt  v4_10.txt.txt  v4_100.txt.txt  v4_1000.txt.txt  v4_10000.txt.txt  v4_100000.txt.txt  v4_20000.txt.txt  v4_40000.txt.txt  v4_60000.txt.txt
graphs/rawdata/: processData.sh
graphs/rawdata/1k/: localsys_1000.txt
graphs/rawdata/cd/: localsys_cd.txt  v4_cd.txt
graphs/rawdata/v4/: v4_1.txt  v4_10.txt  v4_1000.txt  v4_100000.txt  v4_60000.txt
results/: localhost_1.txt  localhost_10.txt  localhost_100.txt  localhost_1000.txt  localhost_10000.txt  localhost_100000.txt  localhost_20000.txt  localhost_40000.txt  localhost_60000.txt  localhost_cd.txt  localsys_1.txt  localsys_10.txt  localsys_100.txt  localsys_10000.txt  localsys_100000.txt  localsys_20000.txt  localsys_40000.txt  localsys_60000.txt  v2_1.txt  v2_10.txt  v2_100.txt  v2_1000.txt  v2_10000.txt  v2_100000.txt  v2_20000.txt  v2_40000.txt  v2_60000.txt  v2_cd.txt  v3_1.txt  v3_10.txt  v3_100.txt  v3_1000.txt  v3_10000.txt  v3_100000.txt  v3_20000.txt  v3_40000.txt  v3_60000.txt  v3_cd.txt  v4_100.txt  v4_10000.txt  (+2 more)
results2/: v2_10.txt  v2_100.txt  v2_1000.txt  v2_10000.txt  v2_100000.txt  v2_20000.txt  v2_40000.txt  v2_60000.txt  v3_10.txt  v3_100.txt  v3_1000.txt  v3_10000.txt  v3_100000.txt  v3_20000.txt  v3_40000.txt  v3_60000.txt
server_side/nfsServer/: CMakeLists.txt  NFSServer.cpp  makefile
server_side/v1/: CMakeLists.txt  Makefile  NFSServer.cpp  NFSServer.h  NfsFuseServer.cpp  NfsFuseServer.h  NfsRpc.thrift  NfsRpc_server.cpp  RPCGateway.cpp  RPCGateway.h  fusexmp.c
server_side/v1/gen-cpp/: NfsRpc.cpp  NfsRpc.h  NfsRpc_server.skeleton.cpp  NfsRpc_types.cpp  NfsRpc_types.h
server_side/v2/: CMakeLists.txt  Makefile  NfsFuseServer.cpp  NfsRpc_server.cpp  RPCGateway.cpp  RPCGateway.h  WriteCache.cpp  WriteCache.h  WriteCacheEntry.cpp  WriteCacheEntry.h
server_side/v2/gen-cpp/: NfsRpc.h  NfsRpc_constants.h  NfsRpc_server.skeleton.cpp  NfsRpc_types.cpp
test_fuse/: CMakeLists.txt  getattr_file.cpp  inode_gen.cpp  makefile  read_file.cpp  read_file_c.cpp  read_file_cpp.cpp  read_file_fd.cpp  temp.txt  write_file_fd.cpp  write_sleep_sync.cpp
